--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0"><meta name=apple-mobile-web-app-capable content=yes><meta name=format-detection content="telephone=no"><title>梦中的魔法森林</title><link href=./static/css/app.80321bcfd947489bf629696834f31571.css rel=stylesheet></head><body><div id=entry></div><script type=text/javascript src=./static/js/manifest.7dc2ecf54e402ab6850b.js></script><script type=text/javascript src=./static/js/vendor.e8fc08e1558ac1c1c7b7.js></script><script type=text/javascript src=./common.js></script><script type=text/javascript src=./static/js/app.28c66f8a2720db61aeeb.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0"><meta name=apple-mobile-web-app-capable content=yes><meta name=format-detection content="telephone=no"><title>梦中的魔法森林</title><link href=./static/css/app.80321bcfd947489bf629696834f31571.css rel=stylesheet></head><body><div id=entry></div><script>var _mtac = {};
+      (function() {
+          var mta = document.createElement("script");
+          mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
+          mta.setAttribute("name", "MTAH5");
+          mta.setAttribute("sid", "500496405");
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(mta, s);
+      })();</script><script type=text/javascript src=./static/js/manifest.7dc2ecf54e402ab6850b.js></script><script type=text/javascript src=./static/js/vendor.e8fc08e1558ac1c1c7b7.js></script><script type=text/javascript src=./common.js></script><script type=text/javascript src=./static/js/app.28c66f8a2720db61aeeb.js></script></body></html>
